change id to class

--- a/submissions/Eugene50/popup-menu/index.html
+++ b/submissions/Eugene50/popup-menu/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     
-    <div id="container">
+    <div class="container">
         <div class="menu-item"><a href="#">Mail</a></div>
-        <div id="blog" class="menu-item"><a href="#">Blog</a></div>
+        <div class="blog" class="menu-item"><a href="#">Blog</a></div>
         <input id="main-checkbox" type="checkbox">
-        <label id="menu-label" for="main-checkbox">
-            <img id="menu-icon" src="img\menu.png" height="20" width="20"/>
+        <label class="menu-label" for="main-checkbox">
+            <img class="menu-icon" src="img\menu.png" height="20" width="20"/>
         </label>
         <div class="menu-item"><a href="#">Music</a></div>
-        <div><a href="#"><img id="alf" src="img/alf.jpg" alt="User"></a></div>
+        <div><a href="#"><img class="alf" src="img/alf.jpg" alt="User"></a></div>
 
-        <div id="wraper">
-            <div id="hidden-container">
+        <div class="wraper">
+            <div class="hidden-container">
                 <a href="#"><div class="item" tabindex="1"><img src="img/1.png" alt="">Advertising</div></a>
                 <a href="#"><div class="item" tabindex="2"><img src="img/2.png" alt="">Mail</div></a>
                 <a href="#"><div class="item" tabindex="3"><img src="img/3.png" alt="">News</div></a>
@@ -33,11 +33,11 @@
             </div>
 
             <input id="sub-checkbox" type="checkbox">
-            <label id="more-label" for="sub-checkbox">
+            <label class="more-label" for="sub-checkbox">
                     <p>More</p>
             </label>
             
-            <div id="sub-container">
+            <div class="sub-container">
                 <a href="#"><div class="item" tabindex="11"><img src="img/1.png" alt="">Advertising</div></a>
                 <a href="#"><div class="item" tabindex="12"><img src="img/2.png" alt="">Mail</div></a>
                 <a href="#"><div class="item" tabindex="13"><img src="img/3.png" alt="">News</div></a>
@@ -49,7 +49,7 @@
                 <a href="#"><div class="item" tabindex="18"><img src="img/8.png" alt="">Sites</div></a>
                 <a href="#"><div class="item" tabindex="19"><img src="img/9.png" alt="">Comunity</div></a>
                 <a href="#"><div class="item" tabindex="20"><img src="img/10.png" alt="">You</div></a>
-                <div id="footer-link">
+                <div class="footer-link">
                     <a href="#">Even more from Google</a>
                 </div>
             </div> 
