fix tabindex for hidden input

--- a/submissions/Aldegid/google-style-popup/app/index.html
+++ b/submissions/Aldegid/google-style-popup/app/index.html
@@ -79,7 +79,7 @@
 				</div>
 				</div>
 
-				<input type="checkbox" name="" id="more-btn" class="more-input hidden-input">
+				<input type="checkbox" name="" id="more-btn" class="more-input hidden-input" tabindex="-1">
 				<label for="more-btn" class="more-btn">
 					More
 				</label>
