add alt attributes.

--- a/submissions/Eugene50/popup-menu/index.html
+++ b/submissions/Eugene50/popup-menu/index.html
@@ -20,16 +20,16 @@
 
         <div class="wraper">
             <div class="hidden-container">
-                <a href="#"><div class="item" tabindex="1"><img src="img/1.png" alt="">Advertising</div></a>
-                <a href="#"><div class="item" tabindex="2"><img src="img/2.png" alt="">Mail</div></a>
-                <a href="#"><div class="item" tabindex="3"><img src="img/3.png" alt="">News</div></a>
-                <a href="#"><div class="item" tabindex="4"><img src="img/4.png" alt="">Search</div></a>
-                <a href="#"><div class="item" tabindex="5"><img src="img/5.png" alt="">Blog</div></a>
-                <a href="#"><div class="item" tabindex="6"><img src="img/6.png" alt="">Calendar</div></a>
-                <a href="#"><div class="item" tabindex="7"><img src="img/7.png" alt="">Assistent</div></a>
-                <a href="#"><div class="item" tabindex="8"><img src="img/8.png" alt="">Sites</div></a>
-                <a href="#"><div class="item" tabindex="9"><img src="img/9.png" alt="">Comunity</div></a>
-                <a href="#"><div class="item" tabindex="10"><img src="img/10.png" alt="">You</div></a> 
+                <a href="#"><div class="item" tabindex="1"><img src="img/1.png" alt="Advertising">Advertising</div></a>
+                <a href="#"><div class="item" tabindex="2"><img src="img/2.png" alt="Mail">Mail</div></a>
+                <a href="#"><div class="item" tabindex="3"><img src="img/3.png" alt="News">News</div></a>
+                <a href="#"><div class="item" tabindex="4"><img src="img/4.png" alt="Search">Search</div></a>
+                <a href="#"><div class="item" tabindex="5"><img src="img/5.png" alt="Blog">Blog</div></a>
+                <a href="#"><div class="item" tabindex="6"><img src="img/6.png" alt="Calendar">Calendar</div></a>
+                <a href="#"><div class="item" tabindex="7"><img src="img/7.png" alt="Assistent">Assistent</div></a>
+                <a href="#"><div class="item" tabindex="8"><img src="img/8.png" alt="Sites">Sites</div></a>
+                <a href="#"><div class="item" tabindex="9"><img src="img/9.png" alt="Comunity">Comunity</div></a>
+                <a href="#"><div class="item" tabindex="10"><img src="img/10.png" alt="You">You</div></a> 
             </div>
 
             <input id="sub-checkbox" type="checkbox">
@@ -38,17 +38,17 @@
             </label>
             
             <div class="sub-container">
-                <a href="#"><div class="item" tabindex="11"><img src="img/1.png" alt="">Advertising</div></a>
-                <a href="#"><div class="item" tabindex="12"><img src="img/2.png" alt="">Mail</div></a>
-                <a href="#"><div class="item" tabindex="13"><img src="img/3.png" alt="">News</div></a>
-                <a href="#"><div class="item" tabindex="14"><img src="img/4.png" alt="">Search</div></a>
-                <a href="#"><div class="item" tabindex="15"><img src="img/5.png" alt="">Blog</div></a>
-                <a href="#"><div class="item" tabindex="16"><img src="img/6.png" alt="">Calendar</div></a>
-                <a href="#"><div class="item" tabindex="17"><img src="img/7.png" alt="">Assistent</div></a>
-                <a href="#"><div class="item" tabindex="18"><img src="img/8.png" alt="">Sites</div></a>
-                <a href="#"><div class="item" tabindex="18"><img src="img/8.png" alt="">Sites</div></a>
-                <a href="#"><div class="item" tabindex="19"><img src="img/9.png" alt="">Comunity</div></a>
-                <a href="#"><div class="item" tabindex="20"><img src="img/10.png" alt="">You</div></a>
+                <a href="#"><div class="item" tabindex="11"><img src="img/1.png" alt="Advertising">Advertising</div></a>
+                <a href="#"><div class="item" tabindex="12"><img src="img/2.png" alt="Mail">Mail</div></a>
+                <a href="#"><div class="item" tabindex="13"><img src="img/3.png" alt="News">News</div></a>
+                <a href="#"><div class="item" tabindex="14"><img src="img/4.png" alt="Search">Search</div></a>
+                <a href="#"><div class="item" tabindex="15"><img src="img/5.png" alt="Blog">Blog</div></a>
+                <a href="#"><div class="item" tabindex="16"><img src="img/6.png" alt="Calendar">Calendar</div></a>
+                <a href="#"><div class="item" tabindex="17"><img src="img/7.png" alt="Assistent">Assistent</div></a>
+                <a href="#"><div class="item" tabindex="18"><img src="img/8.png" alt="Sites">Sites</div></a>
+                <a href="#"><div class="item" tabindex="18"><img src="img/8.png" alt="Sites">Sites</div></a>
+                <a href="#"><div class="item" tabindex="19"><img src="img/9.png" alt="Comunity">Comunity</div></a>
+                <a href="#"><div class="item" tabindex="20"><img src="img/10.png" alt="You">You</div></a>
                 <div class="footer-link">
                     <a href="#">Even more from Google</a>
                 </div>
