--- a/submissions/Eugene50/popup-menu/index.html
+++ b/submissions/Eugene50/popup-menu/index.html
@@ -10,7 +10,7 @@
     
     <div class="container">
         <div class="menu-item"><a href="#">Mail</a></div>
-        <div class="blog" class="menu-item"><a href="#">Blog</a></div>
+        <div class="menu-item"><a href="#">Blog</a></div>
         <input id="main-checkbox" type="checkbox">
         <label class="menu-label" for="main-checkbox">
             <img class="menu-icon" src="img\menu.png" height="20" width="20"/>
