--- a/submissions/iamsokol/form/index.html
+++ b/submissions/iamsokol/form/index.html
@@ -14,7 +14,7 @@
       <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
       Go back
     </button>
-    <img class="header-logo" src="assets/img/logo.png" alt="logo">
+    <h1><img class="header-logo" src="assets/img/logo.png" alt="logo"></h1>
     <button class="header-sign sm-button" type="button" name="button">
       <i class="fa fa-user" aria-hidden="true"></i>
       Sign in
@@ -22,7 +22,7 @@
   </header>
   <main class="main">
     <form action="#" method="POST" class="form">
-      <section class="main-head">
+      <header class="main-head">
         <div class="order">
           <div class="order-in">
             <h3 class="order-title">Your order</h3>
@@ -58,22 +58,22 @@
             <a href="mailto:help@qtest.com" class="help-mail">help@qtest.com</a>
           </div>
         </div>
-      </section>
+      </header>
       <section class="select">
-        <h1 class="select-title">Select what you want to translate</h1>
+        <p class="select-title">Select what you want to translate</p>
         <fieldset>
           <div class="select-type">
-            <input type="radio" id="website" name="selectType">
+            <input class="visually-radio" type="radio" id="website" name="selectType">
             <label for="website">
               <img src="assets/img/website.png" alt="website">
               Website
             </label>
-            <input type="radio" id="documents" name="selectType" checked>
+            <input class="visually-radio" type="radio" id="documents" name="selectType" checked>
             <label for="documents">
               <img src="assets/img/documents.png" alt="documents">
               Documents
             </label>
-            <input type="radio" id="social" name="selectType">
+            <input class="visually-radio" type="radio" id="social" name="selectType">
             <label for="social">
               <img src="assets/img/social.png" alt="social">
               Social Account
@@ -89,7 +89,7 @@
             <i class="fa fa-cloud-upload" aria-hidden="true"></i>
             Upload a new file
           </label>
-          <input class="file" type="file" id="file" name="file" title="download file">
+          <input class="file visually-hidden" type="file" id="file" name="file" title="download file">
         </fieldset>
         <div class="document-in">
           <div class="document-in-head">
@@ -105,7 +105,7 @@
             </p>
             <p>78kb</p>
             <p>842</p>
-            <i class="fa fa-trash" aria-hidden="true"></i>
+            <button class="trash" name="button" type="button"><i class="fa fa-trash" aria-hidden="true"></i></button>
           </div>
           <div class="document-in-item">
             <p>
@@ -114,7 +114,7 @@
             </p>
             <p>26kb</p>
             <p>2.326</p>
-            <i class="fa fa-trash" aria-hidden="true"></i>
+            <button class="trash" name="button" type="button"><i class="fa fa-trash" aria-hidden="true"></i></button>
           </div>
         </div>
       </section>
@@ -147,7 +147,7 @@
             </select>
           </div>
           <i class="fa fa-trash" aria-hidden="true"></i>
-          <button class="sm-button" type="button" name="button">
+          <button class="sm-button add-button" type="button" name="button">
             <i class="fa fa-plus" aria-hidden="true"></i>
             Add
           </button>
@@ -155,17 +155,17 @@
       </section>
       <section class="tone">
         <h2 class="title">Select your desired tone</h2>
-        <input type="checkbox" id="friendly" name="toneType">
+        <input type="checkbox" class="visually-radio" id="friendly" name="toneType">
         <label for="friendly" class="sm-button">
           <i class="fa fa-weixin" aria-hidden="true"></i>
           Friendly / Casual
         </label>
-        <input type="checkbox" id="corporate" name="toneType" checked>
+        <input type="checkbox" class="visually-radio" id="corporate" name="toneType" checked>
         <label for="corporate" class="sm-button">
           <i class="fa fa-medkit" aria-hidden="true"></i>
           Corporate / Pro
         </label>
-        <input type="checkbox" id="media" name="toneType">
+        <input type="checkbox" class="visually-radio" id="media" name="toneType">
         <label for="media" class="sm-button">
           <i class="fa fa-users" aria-hidden="true"></i>
           Media / Formal
@@ -189,29 +189,32 @@
       <section class="payment">
         <h2 class="title">Sign up and choose a payment method</h2>
         <p class="payment-description">Already have account with us? <a href="#">Sign in</a></p>
-        <fieldset class="full-width">
-          <legend>Full name</legend>
-          <input type="text" pattern="[A-Za-zА-Яа-яЁё]{1,}" placeholder="Full name" value="Mathieu Mayer" class="sm-input validate">
+        <fieldset class="full-width validate">
+          <label>Full name</label>
+          <input type="text" placeholder="Full name" minlength="3" title="Set name more than 3 letters"  value="Dmytro Ivanov" class="sm-input" required>
+          <span class="input-result"></span>
         </fieldset>
-        <fieldset>
-          <legend>Email adress</legend>
-          <input type="email" pattern="[A-Za-zА-Яа-яЁё]{1,}" placeholder="Email adress" value="mathieu.mm@me.com" class="sm-input validate">
+        <fieldset class="validate">
+          <label>Email adress</label>
+          <input type="email" placeholder="Email adress" value="dmytroivanov@gmail.com" class="sm-input" required>
+          <span class="input-result"></span>
         </fieldset>
-        <fieldset>
-          <legend>Choose a password</legend>
-          <input type="password" pattern="[A-Za-zА-Яа-яЁё]{1,}" placeholder="Choose a password" value="" class="sm-input validate">
+        <fieldset class="validate">
+          <label>Choose a password</label>
+          <input type="password" placeholder="Choose a password" minlength="6" title="Set password more than 6 letters" class="sm-input" required>
+          <span class="input-result"></span>
         </fieldset>
-        <fieldset class="full-width">
+        <fieldset class="payment-way">
           <div class="payment-type">
-            <input type="radio" id="visa" name="payment" checked>
+            <input type="radio" class="visually-radio" id="visa" name="payment" checked>
             <label for="visa">
               <img src="assets/img/visa.png" alt="visa">
             </label>
-            <input type="radio" id="paypal" name="payment">
+            <input type="radio" class="visually-radio" id="paypal" name="payment">
             <label for="paypal">
               <img src="assets/img/paypal.png" alt="paypal">
             </label>
-            <input type="radio" id="amazon" name="payment">
+            <input type="radio" class="visually-radio" id="amazon" name="payment">
             <label for="amazon">
               <img src="assets/img/amazon.png" alt="amazon">
             </label>
@@ -219,19 +222,23 @@
         </fieldset>
         <fieldset class="payment-card">
           <legend>Card number</legend>
-          <input type="number" placeholder="Card number" value="" class="sm-input">
+          <input type="number" placeholder="Card number" class="sm-input card-number">
         </fieldset>
         <fieldset class="payment-expiry">
           <legend>Expiry date</legend>
-          <input type="date" placeholder="DD / MM / YY" value="" class="sm-input">
+          <input type="date" placeholder="DD / MM / YY" class="sm-input">
         </fieldset>
         <fieldset class="payment-code">
           <legend>Code</legend>
-          <input type="password" placeholder="Code" value="" class="sm-input">
+          <input type="password" placeholder="Code" class="sm-input">
         </fieldset>
+      </section>
+      <section class="submit-block">
         <div class="payment-submit">
-          <input type="checkbox" name="terms" id="terms">
-          <label for="terms">I agree to the</label><a href="#">Terms & Conditions</a>
+          <div class="payment-submit-agree">
+            <input type="checkbox" name="terms" id="terms">
+            <label for="terms" class="agree">I agree to the</label><a href="#">Terms & Conditions</a>
+          </div>
           <button class="order-button-order sm-button" type="submit" name="button">Place order</button>
           <button class="order-button-print sm-button" type="button" name="button">Print a quote</button>
         </div>
@@ -248,15 +255,17 @@
         <h3 class="footer-item-title">Our main office</h3>
         <p class="footer-item-description">Dubai, UAE</p>
         <p class="footer-item-description">P.O. Box: 502735</p>
-        <p class="footer-item-description">Phone: +971(0)44278128</p>
+        <a href="tel:+971(0)44278128" class="footer-item-description">Phone: +971(0)44278128</a>
       </div>
       <div class="footer-item social">
         <h3 class="footer-item-title">Connect with us</h3>
-        <a href="#" class="footer-item-description"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</p>
+        <a href="#" class="footer-item-description"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</a>
         <a href="#" class="footer-item-description"><i class="fa fa-twitter" aria-hidden="true"></i> Twiter</a>
         <a href="#" class="footer-item-description"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
       </div>
-      <img src="assets/img/logo2.png" alt="logo2">
+      <div class="footer-item">
+        <img src="assets/img/logo2.png" alt="logo2">
+      </div>
     </div>
   </footer>
 </body>
