fix focused elements order

--- a/submissions/Aldegid/google-style-popup/app/index.html
+++ b/submissions/Aldegid/google-style-popup/app/index.html
@@ -33,7 +33,7 @@
 			<a href="#">Картинки</a>
 			<input type="checkbox" name="popup" class="popup__input hidden-input" id="popup">
 			<label for="popup" class="popup__label">
-				<div class="popup__icon"></div>
+				<span class="popup__icon"></span>
 			</label>
 			<div class="popup__inner">
 				<div class="popup__inner-container">
@@ -79,7 +79,7 @@
 				</div>
 				</div>
 
-				<input type="checkbox" name="" id="more-btn" class="more-input hidden-input" tabindex="-1">
+				<input type="checkbox" name="more" id="more-btn" class="more-input hidden-input">
 				<label for="more-btn" class="more-btn">
 					More
 				</label>
@@ -121,7 +121,6 @@
 						<span class="popup__inner-item earth"></span>
 						<span>Earth</span>
 					</div>
-					<input type="text" autofocus class="hidden-input">
 				</div>
 
 			</div>
