--- a/submissions/patrofimov/html5-form/index.html
+++ b/submissions/patrofimov/html5-form/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
+		
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body class="document">
@@ -106,53 +107,56 @@
               <div class="translate_select">
                 <input
                   required
+				  id = "translate_1"
                   type="radio"
                   name="translate-type"
                   class="visually-hidden translate_input"
                   value="website"
                 />
-                <div class="translate_figure">
+                <label class="translate_figure" for = "translate_1">
                   <img
                     src="img/translate-1.jpg"
                     alt="translate site"
                     class="translate_img"
                   />
                   <span class="translate_figcaption">Website</span>
-                </div>
+                </label>
               </div>
               <div class="translate_select">
                 <input
                   required
+				  id = "translate_2"
                   type="radio"
                   name="translate-type"
                   class="visually-hidden translate_input"
                   value="documents"
                 />
-                <div class="translate_figure">
+                <label class="translate_figure" for = "translate_2">
                   <img
                     src="img/translate-2.jpg"
                     alt="translate documents"
                     class="translate_img"
                   />
                   <span class="translate_figcaption">Documents</span>
-                </div>
+                </label>
               </div>
               <div class="translate_select">
                 <input
                   required
+				  id = "translate_3"
                   type="radio"
                   name="translate-type"
                   class="visually-hidden translate_input"
                   value="social-account"
                 />
-                <div class="translate_figure">
+                <label class="translate_figure" for = "translate_3">
                   <img
                     src="img/translate-3.jpg"
                     alt="translate social-account"
                     class="translate_img"
                   />
                   <span class="translate_figcaption">Social account</span>
-                </div>
+                </label>
               </div>
             </fieldset>
           </section>
